Added slideshow to headers

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="scripts.js" defer></script>
     <title>TGIV</title>
 </head>
 <body>
@@ -44,6 +45,14 @@
 
     <!-- HERO SECTION -->
     <header class="header fade-in">
+        <div class="header__slideshow">
+            <img src="img/burger-header.jpg" alt="burger" class="header__slideshow-img">
+            <img src="img/cannoli.jpg" alt="cannoli" class="header__slideshow-img">
+            <img src="img/fried.jpg" alt="fried tofu" class="header__slideshow-img">
+            <img src="img/pancakes.jpg" alt="pancakes" class="header__slideshow-img">
+            <img src="img/sandwich-about.jpg" alt="seitan sandwich" class="header__slideshow-img">
+            <img src="img/fried-2.jpg" alt="fried mushrooms" class="header__slideshow-img">
+        </div>
         <div class="header__text-box">
             <h1 class="heading-primary">Thank Goodness It's Vegan</h1>
             <h2 class="heading-secondary">Anything You Can Do I Can Do Vegan!</h2>
@@ -289,7 +298,5 @@
         </section>
         
     </main>
-
-    <script src="scripts.js"></script>
 </body>
 </html>
