Added responsive to max 820px

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="navigation__item"><a href="#about" class="navigation__link">About</a></li>
                 <li class="navigation__item"><a href="#menu" class="navigation__link">Menu</a></li>
                 <li class="navigation__item"><a href="#hours-and-location" class="navigation__link">Hours & Location</a></li>
-                <li class="navigation__item"><a href="#catering-and-contact" class="navigation__link">Catering</a></li>
+                <li class="navigation__item"><a href="#catering-and-contact" class="navigation__link">Catering & Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -48,9 +48,9 @@
         <div class="header__slideshow">
             <img src="img/burger-header.jpg" alt="burger" class="header__slideshow-img">
             <img src="img/cannoli.jpg" alt="cannoli" class="header__slideshow-img">
+            <img src="img/burger-and-fries.jpg" alt="burger and fries" class="header__slideshow-img">
             <img src="img/fried.jpg" alt="fried tofu" class="header__slideshow-img">
             <img src="img/pancakes.jpg" alt="pancakes" class="header__slideshow-img">
-            <img src="img/sandwich-about.jpg" alt="seitan sandwich" class="header__slideshow-img">
             <img src="img/fried-2.jpg" alt="fried mushrooms" class="header__slideshow-img">
         </div>
         <div class="header__text-box">
@@ -70,8 +70,8 @@
         <!-- ABOUT SECTION -->
         <section class="section-about fade-in" id="about">
             <div class="section-about__text-box">
-                <h3 class="heading-main heading-main--white margin-bottom-small">About</h3>
-                <p class="paragraph paragraph--white">Thank Goodness It's Vegan started out as a food truck located in Chester NY.  Exactly one year later, TGIV, the restaurant opened! Serving up 100% vegan food that is more than just a standard salad.</p>
+                <h3 class="heading-main heading-main--white margin-bottom-small margin-top-small">About</h3>
+                <p class="paragraph paragraph--white margin-bottom-small">Thank Goodness It's Vegan started out as a food truck located in Chester NY.  Exactly one year later, TGIV, the restaurant opened! Serving up 100% vegan food that is more than just a standard salad.</p>
             </div>
             <div class="section-about__image"></div>
         </section>
@@ -267,7 +267,7 @@
         <section class="section-hours-location fade-in" id="hours-and-location">
             <iframe class="section-hours-location__gmap" src="https://snazzymaps.com/embed/294348"  style="border:none;"></iframe>
             <div class="section-hours-location__text-box">
-                <h3 class="heading-main heading-main--brown margin-bottom-med margin-top-lg">Hours & Location</h3>
+                <h3 class="heading-main heading-main--brown margin-bottom-med">Hours & Location</h3>
                 <p class="paragraph paragraph--blue">
                     <a class="section-hours-location__link" target="_blank"href="https://www.google.com/maps/place/9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!8m2!3d41.3627837!4d-74.2705903">9 Winkler Pl, Chester, NY 10918</a>
                     <a href="tel:(845)469-4423" target="_blank" class="section-hours-location__link">(845)469-4423</a>
@@ -275,7 +275,7 @@
                 <a href="https://www.google.com/maps/dir//9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!2m2!1d-74.2705903!2d41.3627837!3e0" target="_blank" class="btn btn--blue margin-top-small margin-bottom-med">Get Directions</a>
                <p class="paragraph paragraph--brown margin-top-small">
                    <span class="section-hours-location__hours">Wednesday-Saturady: 12pm-7pm</span>
-                   <span class="section-hours-location__hours">Sunday: 10am-5pm</span>
+                   <span class="section-hours-location__hours margin-bottom-small">Sunday: 10am-5pm</span>
                 </p>
             </div>
         </section>
