Added more responsive to max 700px

--- a/index.html
+++ b/index.html
@@ -232,23 +232,23 @@
             </div>
             <div class="section-menu__desserts">
                 <h3 class="heading-main-secondary heading-main-secondary--brown margin-bottom-x-small">Desserts</h3>
-                <p class="section-menu__description section-menu__description--dessert margin-bottom-small">*These are only some of our choices, we make baked goods seasonally and daily. Call us to see what we have baking today!</p>
+                <p class="section-menu__description section-menu__description--dessert margin-bottom-small padding-small">*These are only some of our choices, we make baked goods seasonally and daily. Call us to see what we have baking today!</p>
                 <div class="section-menu__dessert-container margin-bottom-x-small">
                     <div class="section-menu__dessert-item">
                         <h5 class="section-menu__title margin-bottom-x-small">Cake slice</h5>
-                        <span class="section-menu__price section-menu__price">$6</span>
+                        <span class="section-menu__price section-menu__price margin-bottom-small">$6</span>
                     </div>
                     <div class="section-menu__dessert-item">
                         <h5 class="section-menu__title margin-bottom-x-small">Whoopies</h5>
-                        <span class="section-menu__price section-menu__price">$5</span>
+                        <span class="section-menu__price section-menu__price margin-bottom-small">$5</span>
                     </div>
                     <div class="section-menu__dessert-item">
                         <h5 class="section-menu__title margin-bottom-x-small">Brownies</h5>
-                        <span class="section-menu__price section-menu__price">$5</span>
+                        <span class="section-menu__price section-menu__price margin-bottom-small">$5</span>
                     </div>
                     <div class="section-menu__dessert-item">
                         <h5 class="section-menu__title margin-bottom-x-small">Pecan sticky bun</h5>
-                        <span class="section-menu__price section-menu__price">$6.95</span>
+                        <span class="section-menu__price section-menu__price margin-bottom-small">$6.95</span>
                     </div>
                 </div>
             </div>
