Added bottom contact bar to phone size screen

--- a/index.html
+++ b/index.html
@@ -296,17 +296,17 @@
                 <a href="mailto:thankgoodnessitsvegan@outlook.com" target="_blank" class="section-catering__link">thankgoodnessitsvegan@outlook.com</a>
             </div>
         </section>
-        
-        <!-- SMALL SCREEN BOTTOM CONTACT -->
-        <section class="section-bottom-contact">
-            <div class="section-bottom-contact__phone">
-                <a href="tel:(845)469-4423" target="_blank" class="bottom-contact__link"></a>
-            </div>
-            <div class="section-bottom-contact__address">
-                <a href="https://www.google.com/maps/dir//9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!2m2!1d-74.2705903!2d41.3627837!3e0" target="_blank" class="section-bottom-contact__link"></a>
-            </div>
-        </section>
 
     </main>
+
+    <!-- SMALL SCREEN BOTTOM CONTACT -->
+    <section class="section-bottom-contact">
+        <div class="section-bottom-contact__phone">
+            <a href="tel:(845)469-4423" target="_blank" class="section-bottom-contact__link">Call: (845)469-4423</a>
+        </div>
+        <div class="section-bottom-contact__address">
+            <a href="https://www.google.com/maps/dir//9+Winkler+Pl,+Chester,+NY+10918/@41.3627837,-74.272779,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x89c3290b887f2ca9:0xa6ee3187d9cc74f1!2m2!1d-74.2705903!2d41.3627837!3e0" target="_blank" class="section-bottom-contact__link">9 Winkler Pl, Chester, NY 10918</a>
+        </div>
+    </section>
 </body>
 </html>
